# dsna_exp

./: .gitignore  LICENSE  README.md
dsna_2/: EVFiles.h  Files.cpp  Functions.cpp  Functions.h  test.cpp  test.h  vex.txt
exp1/: CMakeLists.txt  Compress.cpp  Compress.h  HuffmanTree.cpp  HuffmanTree.h  README.md  main.cpp  pic.bmp.buf
exp2/: CMakeLists.txt  EVFiles.h  Graph.cpp  Graph.h  edge.txt  global.h  main.cpp
exp3/: BasicModeWIndow.cpp  BasicModeWindow.h  BasicModeWindow.ui  CMakeLists.txt  Fruit.cpp  Fruit.h  FruitGenerator.cpp  FruitGenerator.h  Game.cpp  Game.h  GlobalData.cpp  GlobalData.h  README.md  RecordManager.cpp  RecordManager.h  TimerText.cpp  TimerText.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map-rates.0.000000.txt  map-rates.0.100000.txt  map-rates.0.200000.txt  map-rates.0.300000.txt  map-rates.0.400000.txt  map-rates.0.500000.txt  map-rates.0.600000.txt  map-rates.0.700000.txt  map-rates.0.800000.txt  map-rates.0.900000.txt  map-rates.1.000000.txt  map.0.000000.txt  map.0.100000.txt  map.0.200000.txt  map.0.300000.txt  map.0.400000.txt  map.0.500000.txt  map.0.600000.txt  map.0.700000.txt  (+15 more)
exp3/resources/: llk.icns
